tests/good/interpret/051-pattern-sum-different-constructor-2.clap
val c=(case{B[x]=>x})(A)
