tests/bad/typing/035-psum-at.clap
val x = case { A at { B } => 42 }
